[test] Make orphan audit tests Java 8 compatible